@@ -1,3 +1,9 @@
+2005-05-22  Sebastien Bacher  <seb128@debian.org>
+
+	* gnome-keyboard-properties-xkbot.c: (xkb_options_add_group):
+	fix the build with gcc-2.95, patch from Jens Granseuer <jensgr@gmx.net>
+	(Closes: #170159).
+
 2005-04-10  Sergey V. Udaltsov <svu@gnome.org>
 
 	* gnome-keyboard-properties-xkbpv.c: improving the preview layout
